# chwall

./: .editorconfig  CONFIG.org  Makefile  README.org  chwall.py  chwall.yml.example  requirements.txt  setup.cfg  setup.py
chwall/: client.py  daemon.py  icon.py  utils.py  wallpaper.py
chwall/fetcher/: __init__.py  bing.py  deviantart.py  flickr.py  local.py  muzei.py  nasa.py  natgeo.py  pexels.py  powder.py  reddit.py  smashing.py  unsplash.py  wallhaven.py  wikiart.py
chwall/gui/: app.py  icon.py  indicator.py  preferences.py  shared.py
data/: _chwall  chwall-completions
locale/: chwall.pot
locale/es/LC_MESSAGES/: chwall.po
locale/fr/LC_MESSAGES/: chwall.po
tests/: test_desktop_files.py  test_local_desktop_files.py
tests/proofs/: app-desktop  local-app-desktop  local-systemd-unit  local-xdg-daemon  local-xdg-icon  systemd-unit  xdg-daemon  xdg-icon
