[metadata]
name = chwall
version = attr: chwall.__version__
description = Wallpaper changer daemon and client
keywords = wallpaper
license = WTFPL
author = Étienne Deparis
author_email = etienne@depar.is
url = https://git.deparis.io/chwall
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: X11 Applications :: GTK
    Intended Audience :: End Users/Desktop
    License :: What The F*** Public License (WTFPL)
    Programming Language :: Python :: 3
    Topic :: Desktop Environment

[options]
zip_safe = False
packages = find:
install_requires =
    pyyaml
    requests
    pyxdg
    lxml
    cssselect

[options.entry_points]
console_scripts =
    chwall-daemon = chwall.daemon:start_daemon
    chwall = chwall.client:ChwallClient
gui_scripts =
    chwall-icon = chwall.gui.icon:start_icon
    chwall-app = chwall.gui.app:start_app
