[metadata]
name = chwall
version = attr: chwall.__version__
description = Wallpaper changer daemon and client
keywords = wallpaper
license = WTFPL
author = Étienne Deparis
author_email = etienne@depar.is
url = https://git.umaneti.net/chwall
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: X11 Applications :: GTK
    Intended Audience :: End Users/Desktop
    License :: What The F*** Public License (WTFPL)
    Programming Language :: Python :: 3
    Topic :: Desktop Environment

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    cssselect
    lxml
    Pillow
    pyxdg
    pyyaml
    requests

[options.entry_points]
console_scripts =
    chwall = chwall.client:ChwallClient
    chwall-daemon = chwall.daemon:start_daemon
gui_scripts =
    chwall-app = chwall.gui.app:start_app
    chwall-icon = chwall.gui.icon:start_icon
    chwall-indicator = chwall.gui.indicator:start_indicator

[options.package_data]
* = LICENSE, *.org

[options.packages.find]
exclude = tests
